--- a/templates/app/navbar.html
+++ b/templates/app/navbar.html
@@ -1,8 +1,25 @@
 <br>
-<ul>
-    <li ng-class="{active: isActive(navItem) }" ng-repeat="navItem in items">
-        <a href="#/{{navItem}}">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Linux Dash</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+                <li class="{active: isActive(navItem) }" ng-repeat="navItem in items" class="nav navbar-nav">
+                    <a href="#/{{navItem}}">
             {{getNavItemName(navItem)}}
         </a>
-    </li>
-</ul>
+                </li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+
+</nav>
